--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+
+/* @layer base {
   :root {
     --background: 240 10% 0.1%;
     --foreground: 0 0% 98%;
@@ -48,13 +49,13 @@
     --ring: 262.1 83.3% 57.8%;
     --radius: 0.5rem;
   }
-}
+} */
 
-@layer base {
+/* @layer base {
   * {
     @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
