--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,14 @@
 .read-the-docs {
   color: #888;
 } */
+
+ /* custome css */
+ input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
